--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,46 +1,45 @@
 <div class="container">
-	<div class="row">
-		<div class="col-xs-12 text-center" id="top-bar">
-			<img src="/assets/images/burger.png" alt="burger" />
-			<h1> Eat-Da-Burger! </h1>
-		</div>
-		<div class="col-xs-6 text-center" class="task">
-			<div class="row">
-			  {{#each burgers}}
-			  	{{#unless this.devoured}}
-				<div class="col-xs-9 text-center">
-					<pre>{{this.id}}. {{this.burger_name}}
-					</pre>
-				  		<!-- {{this.Date}} -->
-				</div>
-				<div class="col-xs-3 text-center">
-					<form class="devour-form" class="button-size">
-						<input input type="hidden" class="burger_id" type="text" value={{this.id}}><br>
-						<button type="submit" class="btn btn-default">Devour it!</button>
-					</form>
-				</div>
-				{{/unless}}
-			  {{/each}}
-			</div>
-		</div>
-		<div class="col-xs-6 text-center" class="task">
-			  {{#each burgers}}
-			  	{{#if this.devoured}}
-			  		<input class="form-control" type="text" placeholder="{{this.id}} . {{this.burger_name}}" readonly>
-				{{/if}}
-			  {{/each}}
-		</div>
-	</div>
-</div>
-
-<div class="container">
-	<div class="row">
-		<div class="col-xs-12 text-center enter_section">
-			<form action="/burgers/create" method="POST">
-				<input type="text" class="form-control" name="burger_name" value="" id="enter_text">
-				<button type="submit" class="btn btn-primary" id="text-enter-button">Submit</button>
-			</form>
-			<p>Enter a burger you want to eat Click the "Submit" button.</p>
-		</div>
-	</div>
+    <div class="jumbotron">
+        <div class="row">
+            <h1>Eat-A-Burger <img src="assets/images/burger.png" width="175" height="175"></h1>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <h2>Eat ME!</h2>
+                <ul>
+                    {{#each burgers}}
+                        {{#unless devoured}}
+                            <li>
+                	            {{burger_name}}
+                                <button class="devour btn btn-secondary btn-sm" data-id="{{this.id}}">DEVOUR!</button>
+                            </li>
+                        {{/unless}}
+                    {{/each}}
+                </ul>
+            </div>
+            <div class="col-md-6">
+                <h2>Consumed</h2>
+                <ul>
+                    {{#each burgers}}
+                        {{#if devoured}}
+                            <li>
+                	            {{burger_name}}
+                                <button class="delete btn btn-secondary btn-sm" data-id="{{this.id}}">DELETE</button>
+                            </li>
+                        {{/if}}
+                    {{/each}}
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <h4>Add a Burger</h4>
+            <form class="create-form">
+                <div class="form-group">
+                    <label for="burger">Burger Name:</label>
+                    <input type="text" id="burger">
+                </div>
+                <button class="create-burger btn btn-danger" type="submit">Add Burger</button>
+            </form>
+        </div>
+    </div>
 </div>
